--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+body{
+    background-color: #000;
+}
 .mainContainer {
   display: flex;
   justify-content: center;
@@ -16,11 +19,12 @@
   text-align: center;
   font-size: 32px;
   font-weight: 600;
+  color: #fff;
 }
 
 .bio {
   text-align: center;
-  color: gray;
+  color: #fff;
   margin-top: 16px;
 }
 
@@ -30,5 +34,19 @@
   padding: 8px;
   border: 0;
   border-radius: 5px;
+  color: #FFFFFF;
+  background-color: #0000FF;
   
 }
+
+.connectButton {
+    padding: 8px;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+/* divStyle{
+    background-color: #FFF;
+    width: 50px;
+    height: 100px;
+} */
