--- a/src/App.css
+++ b/src/App.css
@@ -36,6 +36,7 @@ body{
   border-radius: 5px;
   color: #FFFFFF;
   background-color: #0000FF;
+  width: 100%;
   
 }
 
@@ -45,6 +46,10 @@ body{
     border-radius: 5px;
     color: #FFFFFF;
     background-color: #0000FF;
+}
+
+progress {
+    margin-top:50px;
 }
 
 /* divStyle{
